--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -50,3 +50,5 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.1/js/bootstrap.min.js"></script>
 </body>
 </html>
+
+<!-- base of everything -->
